tests/health/tests__lsp__member_definition_test.toit.gold
tests/lsp/member_definition_test.toit:25:5: error: Argument mismatch for 'member1'
Too few arguments provided
    member1
    ^~~~~~~
